--- a/index.html
+++ b/index.html
@@ -59,8 +59,22 @@
         font-family: "EB Garamond", serif;
       }
 
-      .heroBg {
-        background-image: url(./images/banner.png);
+      .bannerOne {
+        background-image: url(./images/banner-1.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 500px;
+      }
+      .bannerTwo {
+        background-image: url(./images/banner-replace-3-1.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 500px;
+      }
+      .bannerThree {
+        background-image: url(./images/banner-replace-1-1.jpg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -174,7 +188,121 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <!-- start banner section  -->
+      <section class="carousel">
+        <!-- slider One  -->
+
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="hero bannerOne">
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-center text-neutral-content">
+              <div class="max-w-4xl">
+                <img
+                  src="./images/user-1.png"
+                  alt=""
+                  class="w-20 mx-auto mb-4"
+                />
+                <h2 class="font-garamond font-extrabold text-4xl text-white">
+                  Awlad Hossain
+                </h2>
+                <span class="text-base font-poppins font-normal text-white"
+                  >UIX Designer</span
+                >
+
+                <p class="mt-24 font-poppins font-normal text-base md:mt-3">
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text. It has roots in a piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock,
+                  a Latin professor at Hampden-Sydney College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <!-- slider Two  -->
+
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="hero bannerTwo">
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-neutral-content">
+              <div class="max-w-4xl">
+                <img
+                  src="./images/user-2.png"
+                  alt=""
+                  class="w-20 mx-auto mb-4"
+                />
+                <h2 class="font-garamond font-extrabold text-4xl text-white">
+                  Luna Paul
+                </h2>
+                <span class="text-base font-poppins font-normal text-white"
+                  >UIX Designer</span
+                >
+
+                <p class="mt-24 font-poppins font-normal text-base md:mt-3">
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text. It has roots in a piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock,
+                  a Latin professor at Hampden-Sydney College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <!-- slider Three  -->
+
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="hero bannerThree">
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-neutral-content">
+              <div class="max-w-4xl">
+                <img
+                  src="./images/user-3.png"
+                  alt=""
+                  class="w-20 mx-auto mb-4"
+                />
+                <h2 class="font-garamond font-extrabold text-4xl text-white">
+                  Lara Bel
+                </h2>
+                <span class="text-base font-poppins font-normal text-white"
+                  >UIX Designer</span
+                >
+
+                <p class="mt-24 font-poppins font-normal text-base md:mt-3">
+                  Contrary to popular belief, Lorem Ipsum is not simply random
+                  text. It has roots in a piece of classical Latin literature
+                  from 45 BC, making it over 2000 years old. Richard McClintock,
+                  a Latin professor at Hampden-Sydney College in Virginia,
+                  looked up one of the more obscure Latin words, consectetur.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
