--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <header class="container mx-auto">
       <!-- start navbar section  -->
 
-      <nav class="navbar bg-base-100">
+      <nav class="navbar bg-base-100 py-4">
         <!-- nav start  -->
         <div class="navbar-start">
           <div class="dropdown">
@@ -180,7 +180,7 @@
         <!-- nav end  -->
         <div class="navbar-end">
           <button
-            class="btn bg-btnColor text-white rounded-none rounded-tr-lg rounded-bl-lg hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-lg hover:rounded-br-lg transition duration-500"
+            class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
           >
             Get In Touch
           </button>
@@ -190,33 +190,32 @@
 
     <main>
       <!-- start banner section  -->
-      <section class="carousel">
+      <section class="carousel h-[90vh]">
         <!-- slider One  -->
 
         <div id="slide1" class="carousel-item relative w-full">
-          <div class="hero bannerOne">
+          <div class="hero bannerOne h-full">
             <div class="hero-overlay"></div>
-            <div class="hero-content text-center text-neutral-content">
-              <div class="max-w-4xl">
-                <img
-                  src="./images/user-1.png"
-                  alt=""
-                  class="w-20 mx-auto mb-4"
-                />
-                <h2 class="font-garamond font-extrabold text-4xl text-white">
-                  Awlad Hossain
-                </h2>
-                <span class="text-base font-poppins font-normal text-white"
-                  >UIX Designer</span
+            <div class="hero-content text-center">
+              <div class="max-w-3xl space-y-6">
+                <p
+                  class="border-2 border-btnColor w-60 mx-auto py-4 rounded-tl-xl rounded-br-xl text-white"
                 >
-
-                <p class="mt-24 font-poppins font-normal text-base md:mt-3">
-                  Contrary to popular belief, Lorem Ipsum is not simply random
-                  text. It has roots in a piece of classical Latin literature
-                  from 45 BC, making it over 2000 years old. Richard McClintock,
-                  a Latin professor at Hampden-Sydney College in Virginia,
-                  looked up one of the more obscure Latin words, consectetur.
+                  Our Vission
                 </p>
+                <h2 class="font-extrabold text-7xl text-white leading-tight">
+                  Powerful Digital Solutions
+                </h2>
+
+                <p class="font-normal text-base text-[#aaafb8] w-[90%] mx-auto">
+                  Duty obligations of business it will frequently occur that
+                  pleasures have to be repudiated and annoyances accepted.
+                </p>
+                <button
+                  class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+                >
+                  Read More
+                </button>
               </div>
             </div>
           </div>
@@ -230,30 +229,29 @@
 
         <!-- slider Two  -->
 
-        <div id="slide2" class="carousel-item relative w-full">
-          <div class="hero bannerTwo">
+        <div id="slide2" class="carousel-item relative w-full h-full">
+          <div class="hero bannerTwo h-full">
             <div class="hero-overlay"></div>
             <div class="hero-content text-neutral-content">
-              <div class="max-w-4xl">
-                <img
-                  src="./images/user-2.png"
-                  alt=""
-                  class="w-20 mx-auto mb-4"
-                />
-                <h2 class="font-garamond font-extrabold text-4xl text-white">
-                  Luna Paul
-                </h2>
-                <span class="text-base font-poppins font-normal text-white"
-                  >UIX Designer</span
+              <div class="max-w-4xl space-y-6">
+                <p
+                  class="border-2 border-btnColor w-60 py-4 rounded-tl-xl rounded-br-xl text-white text-center"
                 >
-
-                <p class="mt-24 font-poppins font-normal text-base md:mt-3">
-                  Contrary to popular belief, Lorem Ipsum is not simply random
-                  text. It has roots in a piece of classical Latin literature
-                  from 45 BC, making it over 2000 years old. Richard McClintock,
-                  a Latin professor at Hampden-Sydney College in Virginia,
-                  looked up one of the more obscure Latin words, consectetur.
+                  Our Vission
                 </p>
+                <h2 class="font-extrabold text-7xl text-white leading-tight">
+                  Inspired <br />Performance
+                </h2>
+
+                <p class="font-normal text-base text-[#aaafb8] w-[70%]">
+                  Duty obligations of business it will frequently occur that
+                  pleasures have to be repudiated and annoyances accepted.
+                </p>
+                <button
+                  class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+                >
+                  Read More
+                </button>
               </div>
             </div>
           </div>
@@ -267,30 +265,29 @@
 
         <!-- slider Three  -->
 
-        <div id="slide3" class="carousel-item relative w-full">
-          <div class="hero bannerThree">
+        <div id="slide3" class="carousel-item relative w-full h-full">
+          <div class="hero bannerThree h-full">
             <div class="hero-overlay"></div>
             <div class="hero-content text-neutral-content">
-              <div class="max-w-4xl">
-                <img
-                  src="./images/user-3.png"
-                  alt=""
-                  class="w-20 mx-auto mb-4"
-                />
-                <h2 class="font-garamond font-extrabold text-4xl text-white">
-                  Lara Bel
-                </h2>
-                <span class="text-base font-poppins font-normal text-white"
-                  >UIX Designer</span
+              <div class="max-w-4xl space-y-6 text-right">
+                <p
+                  class="border-2 border-btnColor w-60 py-4 rounded-tl-xl rounded-br-xl text-white ml-auto text-center"
                 >
-
-                <p class="mt-24 font-poppins font-normal text-base md:mt-3">
-                  Contrary to popular belief, Lorem Ipsum is not simply random
-                  text. It has roots in a piece of classical Latin literature
-                  from 45 BC, making it over 2000 years old. Richard McClintock,
-                  a Latin professor at Hampden-Sydney College in Virginia,
-                  looked up one of the more obscure Latin words, consectetur.
+                  Our Vision
                 </p>
+                <h2 class="font-extrabold text-7xl text-white leading-tight">
+                  Countless <br />Happy Clients
+                </h2>
+
+                <p class="font-normal text-base text-[#aaafb8] w-[70%] ml-auto">
+                  Duty obligations of business it will frequently occur that
+                  pleasures have to be repudiated and annoyances accepted.
+                </p>
+                <button
+                  class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+                >
+                  Read More
+                </button>
               </div>
             </div>
           </div>
