--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="space-y-16">
       <!-- start banner section  -->
       <section class="carousel h-[90vh]">
         <!-- slider One  -->
@@ -296,6 +296,59 @@
           >
             <a href="#slide2" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- start about company section  -->
+      <section class="container mx-auto">
+        <div class="grid grid-cols-2">
+          <!-- about left content  -->
+          <div class="space-y-4">
+            <p class="text-btnColor font-semibold">// About Company</p>
+            <h2 class="text-[#282f3b] text-4xl font-extrabold leading-tight">
+              Your Partner for <br />
+              Software Innovation
+            </h2>
+            <p class="text-[#6d6d6d]">
+              Minimatic Solution is the partner of choice for many of the
+              world’s leading enterprises, SMEs and technology challengers. We
+              help businesses elevate their value through custom software
+              development, product design, QA and consultancy services.
+            </p>
+            <!-- left content bottom  -->
+            <div class="grid grid-cols-2 gap-6 pt-6">
+              <!-- Experience  -->
+              <div class="space-y-4">
+                <i class="fas fa-medal text-4xl text-btnColor"></i>
+                <h5
+                  class="text-[#282f3b] text-2xl font-semibold border-b-4 pb-4"
+                >
+                  Experience
+                </h5>
+                <p class="text-[#6d6d6d]">
+                  Our great team of more than 1400 software experts.
+                </p>
+              </div>
+              <!-- support  -->
+              <div class="space-y-4">
+                <i class="fas fa-headset text-4xl text-btnColor"></i>
+                <h5
+                  class="text-[#282f3b] text-2xl font-semibold border-b-4 pb-4"
+                >
+                  Quick Support
+                </h5>
+                <p class="text-[#6d6d6d]">
+                  We’ll help you test bold new ideas while sharing your.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- about right img  -->
+          <div>
+            <img src="./images/about.png" alt="" />
+            <div></div>
           </div>
         </div>
       </section>
