make aboutCompany responsive

--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
                 >
                   Our Vission
                 </p>
-                <h2 class="font-extrabold text-7xl text-white leading-tight">
+                <h2
+                  class="font-extrabold text-3xl md:text-5xl lg:text-7xl text-white leading-tight"
+                >
                   Powerful Digital Solutions
                 </h2>
 
@@ -233,13 +235,15 @@
           <div class="hero bannerTwo h-full">
             <div class="hero-overlay"></div>
             <div class="hero-content text-neutral-content">
-              <div class="max-w-4xl space-y-6">
+              <div class="max-w-4xl space-y-6 ml-20 lg:ml-0">
                 <p
                   class="border-2 border-btnColor w-60 py-4 rounded-tl-xl rounded-br-xl text-white text-center"
                 >
                   Our Vission
                 </p>
-                <h2 class="font-extrabold text-7xl text-white leading-tight">
+                <h2
+                  class="font-extrabold text-3xl md:text-5xl lg:text-7xl text-white leading-tight"
+                >
                   Inspired <br />Performance
                 </h2>
 
@@ -269,13 +273,15 @@
           <div class="hero bannerThree h-full">
             <div class="hero-overlay"></div>
             <div class="hero-content text-neutral-content">
-              <div class="max-w-4xl space-y-6 text-right">
+              <div class="max-w-4xl space-y-6 text-right mr-20 lg:mr-0">
                 <p
                   class="border-2 border-btnColor w-60 py-4 rounded-tl-xl rounded-br-xl text-white ml-auto text-center"
                 >
                   Our Vision
                 </p>
-                <h2 class="font-extrabold text-7xl text-white leading-tight">
+                <h2
+                  class="font-extrabold text-3xl md:text-5xl lg:text-7xl text-white leading-tight"
+                >
                   Countless <br />Happy Clients
                 </h2>
 
@@ -301,7 +307,7 @@
       </section>
 
       <!-- start about company section  -->
-      <section class="container mx-auto px-10 lg:px-0">
+      <section class="container mx-auto px-10 xl:px-0">
         <div class="grid gap-24 lg:gap-0 lg:grid-cols-2">
           <!-- about left content  -->
           <div class="space-y-4">
@@ -317,7 +323,7 @@
               development, product design, QA and consultancy services.
             </p>
             <!-- left content bottom  -->
-            <div class="grid grid-cols-2 gap-6 pt-6">
+            <div class="grid md:grid-cols-2 gap-6 pt-6">
               <!-- Experience  -->
               <div class="space-y-4">
                 <i class="fas fa-medal text-4xl text-btnColor"></i>
@@ -346,52 +352,51 @@
           </div>
 
           <!-- about right img  -->
-          <div class="relative">
-            <img src="./images/about.png" alt="" />
-            <div>
-              <!-- innovation hr solution  -->
-              <div
-                class="bg-white p-6 shadow-2xl space-y-4 absolute w-[40%] top-0 left-12 rounded"
-              >
-                <img class="mx-auto" src="./images/about-2.png" alt="" />
-                <h2
-                  class="text-[#282f3b] text-3xl font-semibold hover:text-btnColor transition duration-500"
-                >
-                  Innovation HR Solution
-                </h2>
-                <p class="text-[#6d6d6d]">
-                  Except too obtain some work advantages from it but whom has
-                  any rights.
-                </p>
-                <button
-                  class="hover:space-x-4 hover:text-btnColor transition-all duration-300"
-                >
-                  <span>Read More</span>
-                  <i class="fas fa-chevron-right text-sm ml-2"> </i>
-                </button>
-              </div>
+          <div class="relative flex flex-col">
+            <img class="order-2 py-6 md:py-0" src="./images/about.png" alt="" />
 
-              <!-- Leadership development  -->
-              <div
-                class="bg-white p-6 shadow-2xl space-y-4 w-[40%] absolute top-44 right-8 rounded"
+            <!-- innovation hr solution  -->
+            <div
+              class="bg-white p-6 lg:p-4 xl:p-6 shadow-2xl space-y-4 md:absolute md:w-[40%] top-0 left-12 rounded order-1"
+            >
+              <img class="mx-auto" src="./images/about-2.png" alt="" />
+              <h2
+                class="text-[#282f3b] xl:text-3xl lg:text-2xl md:text-3xl font-semibold hover:text-btnColor transition duration-500"
               >
-                <img class="mx-auto" src="./images/about-3.png" alt="" />
-                <h2
-                  class="text-[#282f3b] text-3xl font-semibold hover:text-btnColor transition duration-500"
-                >
-                  Leadership Development
-                </h2>
-                <p class="text-[#6d6d6d]">
-                  Actual teachings of the great explorer of the truth masters
-                  human happiness.
-                </p>
-                <button
-                  class="hover:space-x-4 hover:text-btnColor transition-all duration-300"
-                >
-                  <span>Read More</span>
-                  <i class="fas fa-chevron-right text-sm ml-2"> </i>
-                </button>
-              </div>
+                Innovation HR Solution
+              </h2>
+              <p class="text-[#6d6d6d]">
+                Except too obtain some work advantages from it but whom has any
+                rights.
+              </p>
+              <button
+                class="hover:space-x-4 hover:text-btnColor transition-all duration-300"
+              >
+                <span>Read More</span>
+                <i class="fas fa-chevron-right text-sm ml-2"> </i>
+              </button>
+            </div>
+
+            <!-- Leadership development  -->
+            <div
+              class="bg-white xl:p-6 lg:p-4 p-6 shadow-2xl space-y-4 md:w-[40%] md:absolute top-44 right-8 rounded order-3"
+            >
+              <img class="mx-auto" src="./images/about-3.png" alt="" />
+              <h2
+                class="text-[#282f3b] xl:text-3xl lg:text-2xl md:text-3xl font-semibold hover:text-btnColor transition duration-500"
+              >
+                Leadership Development
+              </h2>
+              <p class="text-[#6d6d6d]">
+                Actual teachings of the great explorer of the truth masters
+                human happiness.
+              </p>
+              <button
+                class="hover:space-x-4 hover:text-btnColor transition-all duration-300"
+              >
+                <span>Read More</span>
+                <i class="fas fa-chevron-right text-sm ml-2"> </i>
+              </button>
             </div>
           </div>
         </div>
