implement technology index

--- a/index.html
+++ b/index.html
@@ -71,14 +71,18 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 500px;
       }
       .bannerThree {
         background-image: url(./images/banner-replace-1-1.jpg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 500px;
+      }
+      .technologyIndex {
+        background-image: url(./images/bg-s2-home3.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
       }
     </style>
   </head>
@@ -307,7 +311,7 @@
       </section>
 
       <!-- start about company section  -->
-      <section class="container mx-auto px-10 xl:px-0">
+      <section class="container mx-auto px-10 xl:px-0 pb-10">
         <div class="grid gap-24 lg:gap-0 lg:grid-cols-2">
           <!-- about left content  -->
           <div class="space-y-4">
@@ -397,6 +401,116 @@
                 <span>Read More</span>
                 <i class="fas fa-chevron-right text-sm ml-2"> </i>
               </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- start technology index  -->
+      <section class="technologyIndex">
+        <div class="container mx-auto px-10 xl:px-0 py-20">
+          <div class="grid lg:grid-cols-2 gap-20 place-items-center">
+            <div class="space-y-4">
+              <p class="text-btnColor font-semibold">// TECHNOLOGY INDEX</p>
+              <h2 class="text-white text-4xl font-extrabold leading-tight">
+                Improve and Innovate <br />
+                with the Tech Trends
+              </h2>
+              <p class="text-white">
+                We hire and build your own remote dedicated development teams
+                tailored to your specific needs. Get professional fulltime
+                developers who work exclusively for you as a part of your
+                company. We handle all the practical aspects related to hiring
+                and hosting your team at our premises, thus saving you half a
+                cost and a lot of efforts.
+              </p>
+              <div class="flex flex-wrap gap-4 justify-between">
+                <div class="md:border-2 rounded p-6">
+                  <strong class="font-extrabold text-4xl text-btnColor"
+                    >330 +</strong
+                  >
+                  <p class="text-white font-bold">Active Clients</p>
+                </div>
+                <div class="md:border-2 p-6">
+                  <strong class="font-extrabold text-4xl text-btnColor"
+                    >850 +</strong
+                  >
+                  <p class="text-white font-bold">Projects Done</p>
+                </div>
+                <div class="md:border-2 p-6">
+                  <strong class="font-extrabold text-4xl text-btnColor"
+                    >25 +</strong
+                  >
+                  <p class="text-white font-bold">Team Advisors</p>
+                </div>
+              </div>
+            </div>
+            <div class="grid md:grid-cols-2 gap-4">
+              <div class="space-y-4 relative">
+                <div class="relative">
+                  <img
+                    class="rounded"
+                    src="./images/technology-index-1.png"
+                    alt=""
+                  />
+                  <div
+                    class="absolute inset-0 bg-btnColor opacity-30 hover:opacity-0 transition-opacity duration-300"
+                  ></div>
+                  <p
+                    class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-2xl"
+                  >
+                    Our Mission
+                  </p>
+                </div>
+                <div class="relative">
+                  <img
+                    class="rounded"
+                    src="./images/technology-index-2.png"
+                    alt=""
+                  />
+                  <div
+                    class="absolute inset-0 bg-btnColor opacity-30 hover:opacity-0 transition-opacity duration-300"
+                  ></div>
+                  <p
+                    class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-2xl"
+                  >
+                    Philosophy
+                  </p>
+                </div>
+              </div>
+
+              <div class="space-y-4 relative pt-10">
+                <div class="relative">
+                  <img
+                    class="rounded"
+                    src="./images/technology-index-3.png"
+                    alt=""
+                  />
+                  <div
+                    class="absolute inset-0 bg-btnColor opacity-30 hover:opacity-0 transition-opacity duration-300"
+                  ></div>
+                  <p
+                    class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-2xl"
+                  >
+                    Our Vision
+                  </p>
+                </div>
+                <div class="relative">
+                  <img
+                    class="rounded"
+                    src="./images/technology-index-4.jpg"
+                    alt=""
+                  />
+                  <div
+                    class="absolute inset-0 bg-btnColor opacity-30 hover:opacity-0 transition-opacity duration-300"
+                  ></div>
+                  <p
+                    class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-white font-bold text-2xl"
+                  >
+                    Strategy
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
