implement our service

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </nav>
     </header>
 
-    <main class="space-y-16">
+    <main class="">
       <!-- start banner section  -->
       <section class="carousel h-[90vh]">
         <!-- slider One  -->
@@ -311,7 +311,7 @@
       </section>
 
       <!-- start about company section  -->
-      <section class="container mx-auto px-10 xl:px-0 pb-10">
+      <section class="container mx-auto px-10 xl:px-0 pb-28 pt-16">
         <div class="grid gap-24 lg:gap-0 lg:grid-cols-2">
           <!-- about left content  -->
           <div class="space-y-4">
@@ -407,7 +407,7 @@
       </section>
 
       <!-- start technology index  -->
-      <section class="technologyIndex">
+      <section class="technologyIndex py-16">
         <div class="container mx-auto px-10 xl:px-0 py-20">
           <div class="grid lg:grid-cols-2 gap-20 place-items-center">
             <div class="space-y-4">
@@ -510,6 +510,121 @@
                     Strategy
                   </p>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- start our service  -->
+      <section class="bg-base-200 py-16">
+        <div class="container mx-auto space-y-8 px-10 xl:px-0">
+          <div class="flex justify-between items-center flex-wrap gap-4">
+            <div class="space-y-4">
+              <p class="text-btnColor font-semibold">// OUR SERVICE</p>
+              <h2
+                class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-tight"
+              >
+                We Offer a Wide <br />
+                Variety of IT Services
+              </h2>
+            </div>
+            <button
+              class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+            >
+              All Service
+            </button>
+          </div>
+          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
+            <!-- card one  -->
+            <div
+              class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
+            >
+              <i class="fas fa-laptop-code text-4xl text-btnColor"></i>
+
+              <div class="space-y-4">
+                <h3 class="text-[#282f3b] text-2xl font-bold">
+                  Web Development
+                </h3>
+                <p class="text-[#6d6d6d]">
+                  We carry more than just good coding skills. Our experience
+                  makes us stand out from other web development.
+                </p>
+              </div>
+            </div>
+            <!-- card Two  -->
+            <div
+              class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
+            >
+              <i class="fas fa-mobile-alt text-4xl text-btnColor"></i>
+              <div class="space-y-4">
+                <h3 class="text-[#282f3b] text-2xl font-bold">
+                  Mobile Development
+                </h3>
+                <p class="text-[#6d6d6d]">
+                  Create complex enterprise software, ensure reliable software
+                  integration, modernise your legacy system.
+                </p>
+              </div>
+            </div>
+            <!-- card Three  -->
+            <div
+              class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
+            >
+              <i class="fas fa-desktop text-4xl text-btnColor"></i>
+
+              <div class="space-y-4">
+                <h3 class="text-[#282f3b] text-2xl font-bold">UI/UX Design</h3>
+                <p class="text-[#6d6d6d]">
+                  Build the product you need on time with an experienced team
+                  that uses a clear and effective design process.
+                </p>
+              </div>
+            </div>
+            <!-- card Four  -->
+            <div
+              class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
+            >
+              <i class="fas fa-bug text-4xl text-btnColor"></i>
+
+              <div class="space-y-4">
+                <h3 class="text-[#282f3b] text-2xl font-bold">QA & Testing</h3>
+                <p class="text-[#6d6d6d]">
+                  Turn to our experts to perform comprehensive, multi-stage
+                  testing and auditing of your software.
+                </p>
+              </div>
+            </div>
+            <!-- card Five  -->
+            <div
+              class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
+            >
+              <i class="fas fa-chart-line text-4xl text-btnColor"></i>
+
+              <div class="space-y-4">
+                <h3 class="text-[#282f3b] text-2xl font-bold">
+                  IT Counsultancy
+                </h3>
+                <p class="text-[#6d6d6d]">
+                  Trust our top minds to eliminate workflow pain points,
+                  implement new tech, and consolidate app portfolios.
+                </p>
+              </div>
+            </div>
+            <!-- card Six  -->
+            <div
+              class="flex flex-col xl:flex-row gap-6 border p-6 rounded-md hover:shadow-lg transition hover:bg-white duration-700"
+            >
+              <i class="fas fa-users text-4xl text-btnColor"></i>
+
+              <div class="space-y-4">
+                <h3 class="text-[#282f3b] text-2xl font-bold">
+                  Dedicated Team
+                </h3>
+                <p class="text-[#6d6d6d]">
+                  Over the past decade, our customers succeeded by leveraging
+                  Intellectsoft’s process of building, motivating.
+                </p>
               </div>
             </div>
           </div>
