--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
         background-position: center;
         background-repeat: no-repeat;
       }
+      .transitionEase {
+        transition: left 0.5s ease;
+      }
+      .transitionTop {
+        transition-property: height;
+      }
     </style>
   </head>
   <body class="font-poppins">
@@ -625,6 +631,342 @@
                   Over the past decade, our customers succeeded by leveraging
                   Intellectsoft’s process of building, motivating.
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- start our team  -->
+      <section class="py-16">
+        <div class="container mx-auto px-10 xl:px-0 space-y-6">
+          <div class="space-y-4">
+            <p class="text-btnColor font-semibold">// OUR TEAM</p>
+            <h2
+              class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-tight"
+            >
+              Professional Individuals
+            </h2>
+            <p class="text-[#6d6d6d] w-[50%]">
+              Our power of choice is untrammelled and when nothing prevents
+              being able to do what we like best every pleasure.
+            </p>
+          </div>
+          <div class="grid gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+            <!-- card one  -->
+            <div class="relative overflow-hidden">
+              <div class="group rounded-2xl overflow-hidden">
+                <img
+                  class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
+                  src="./images/member2.jpg"
+                  alt=""
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black opacity-40 group-hover:opacity-90 transition-opacity duration-500 rounded-2xl"
+                ></div>
+                <div
+                  class="absolute bottom-4 left-4 space-y-2 group-hover:-left-52 transitionEase"
+                >
+                  <p class="uppercase text-white font-bold">Director</p>
+                  <h3 class="text-3xl font-bold text-white">Robert Coper</h3>
+                </div>
+
+                <button
+                  class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl absolute bottom-6 -left-36 group-hover:left-4 transitionEase"
+                >
+                  Read More
+                </button>
+              </div>
+              <!-- card icon  -->
+              <div class="group">
+                <div
+                  class="absolute top-0 pt-10 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 group-hover:block transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-6 mt-8 h-20">
+                    <li>
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                    <li class="uppercase text-white font-medium text-xl">
+                      Share
+                    </li>
+                  </ul>
+                </div>
+                <div
+                  class="absolute top-0 pt-48 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 opacity-0 group-hover:opacity-100 transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-4 mt-8 h-20">
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-instagram rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-linkedin-in rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-twitter rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-facebook-f rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- card Two  -->
+            <div class="relative overflow-hidden">
+              <div class="group rounded-2xl overflow-hidden">
+                <img
+                  class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
+                  src="./images/member3.jpg"
+                  alt=""
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black opacity-40 group-hover:opacity-90 transition-opacity duration-500 rounded-2xl"
+                ></div>
+                <div
+                  class="absolute bottom-4 left-4 space-y-2 group-hover:-left-52 transitionEase"
+                >
+                  <p class="uppercase text-white font-bold">Director</p>
+                  <h3 class="text-3xl font-bold text-white">Robert Coper</h3>
+                </div>
+
+                <button
+                  class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl absolute bottom-6 -left-36 group-hover:left-4 transitionEase"
+                >
+                  Read More
+                </button>
+              </div>
+              <!-- card icon  -->
+              <div class="group">
+                <div
+                  class="absolute top-0 pt-10 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 group-hover:block transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-6 mt-8 h-20">
+                    <li>
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                    <li class="uppercase text-white font-medium text-xl">
+                      Share
+                    </li>
+                  </ul>
+                </div>
+                <div
+                  class="absolute top-0 pt-48 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 opacity-0 group-hover:opacity-100 transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-4 mt-8 h-20">
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-instagram rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-linkedin-in rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-twitter rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-facebook-f rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- card Three  -->
+            <div class="relative overflow-hidden">
+              <div class="group rounded-2xl overflow-hidden">
+                <img
+                  class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
+                  src="./images/team-2.jpg"
+                  alt=""
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black opacity-40 group-hover:opacity-90 transition-opacity duration-500 rounded-2xl"
+                ></div>
+                <div
+                  class="absolute bottom-4 left-4 space-y-2 group-hover:-left-52 transitionEase"
+                >
+                  <p class="uppercase text-white font-bold">Director</p>
+                  <h3 class="text-3xl font-bold text-white">Robert Coper</h3>
+                </div>
+
+                <button
+                  class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl absolute bottom-6 -left-36 group-hover:left-4 transitionEase"
+                >
+                  Read More
+                </button>
+              </div>
+              <!-- card icon  -->
+              <div class="group">
+                <div
+                  class="absolute top-0 pt-10 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 group-hover:block transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-6 mt-8 h-20">
+                    <li>
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                    <li class="uppercase text-white font-medium text-xl">
+                      Share
+                    </li>
+                  </ul>
+                </div>
+                <div
+                  class="absolute top-0 pt-48 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 opacity-0 group-hover:opacity-100 transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-4 mt-8 h-20">
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-instagram rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-linkedin-in rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-twitter rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-facebook-f rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- card Four  -->
+            <div class="relative overflow-hidden">
+              <div class="group rounded-2xl overflow-hidden">
+                <img
+                  class="rounded-2xl h-96 transition duration-500 transform group-hover:scale-105"
+                  src="./images/member-4.png"
+                  alt=""
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black opacity-40 group-hover:opacity-90 transition-opacity duration-500 rounded-2xl"
+                ></div>
+                <div
+                  class="absolute bottom-4 left-4 space-y-2 group-hover:-left-52 transitionEase"
+                >
+                  <p class="uppercase text-white font-bold">Director</p>
+                  <h3 class="text-3xl font-bold text-white">Robert Coper</h3>
+                </div>
+
+                <button
+                  class="btn bg-btnColor text-white rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl absolute bottom-6 -left-36 group-hover:left-4 transitionEase"
+                >
+                  Read More
+                </button>
+              </div>
+              <!-- card icon  -->
+              <div class="group">
+                <div
+                  class="absolute top-0 pt-10 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 group-hover:block transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-6 mt-8 h-20">
+                    <li>
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                    <li class="uppercase text-white font-medium text-xl">
+                      Share
+                    </li>
+                  </ul>
+                </div>
+                <div
+                  class="absolute top-0 pt-48 pb-4 right-0 rounded-b-2xl rounded-tr-2xl bg-btnColor w-20 opacity-0 group-hover:opacity-100 transition duration-1000"
+                >
+                  <ul class="-rotate-90 flex items-center gap-4 mt-8 h-20">
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-instagram rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-linkedin-in rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-twitter rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        size="28px"
+                        class="fab fa-facebook-f rounded-full bg-white p-4"
+                      ></i>
+                    </li>
+                    <li class="rotate-90">
+                      <i
+                        class="fas fa-share-alt rounded-full bg-white p-4"
+                        size="28px"
+                      ></i>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
