--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
               textColor: "#707070",
               btnColor: "#078586",
             },
-            backgroundImage: {
-              "hero-bg": "url(./images/banner.png)",
-            },
           },
         },
       };
@@ -86,9 +83,6 @@
       }
       .transitionEase {
         transition: left 0.5s ease;
-      }
-      .transitionTop {
-        transition-property: height;
       }
     </style>
   </head>
@@ -966,6 +960,139 @@
                       ></i>
                     </li>
                   </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- start Q&A  -->
+      <section class="bg-[#F5F6F9] py-16">
+        <div class="container mx-auto px-10 xl:px-0 space-y-8">
+          <div class="space-y-4">
+            <p class="text-btnColor font-semibold">// FIND USEFUL</p>
+            <h2
+              class="text-[#282f3b] text-3xl md:text-4xl font-extrabold leading-tight"
+            >
+              Question & Answer
+            </h2>
+            <p class="text-[#6d6d6d] w-[50%]">
+              Check our FAQs for quick answers to frequently asked questions we
+              receive. If you have other questions write.
+            </p>
+          </div>
+          <div class="grid lg:grid-cols-2 gap-4">
+            <div class="grid lg:grid-cols-2 gap-4 overflow-hidden">
+              <div class="relative">
+                <img
+                  class="max-w-full overflow-hidden h-96 rounded-md"
+                  src="./images/Q&A-1.jpg"
+                  alt=""
+                />
+                <div
+                  class="absolute inset-0 bg-black opacity-0 hover:opacity-70 transition-opacity flex items-center justify-center rounded-md h-96 duration-1000"
+                >
+                  <button
+                    class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+                  >
+                    Contact
+                  </button>
+                </div>
+              </div>
+
+              <div class="relative">
+                <img
+                  class="max-w-full overflow-hidden h-96 rounded-md"
+                  src="./images/Q&A-2.jpg"
+                  alt=""
+                />
+                <div
+                  class="absolute inset-0 bg-black opacity-0 hover:opacity-70 transition-opacity flex items-center justify-center h-96 rounded-md"
+                >
+                  <button
+                    class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+                  >
+                    Contact
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div class="space-y-6">
+              <div
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl border-r border-dotted border-b border-btnColor"
+              >
+                <input type="radio" name="my-accordion-3" checked="checked" />
+                <div class="collapse-title text-xl font-medium text-[#282f3b]">
+                  1. Are application fee waivers available?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-[#6d6d6d]">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, .
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
+              >
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium text-[#282f3b]">
+                  2. Are application fee waivers available?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-[#6d6d6d]">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, .
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
+              >
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium text-[#282f3b]">
+                  3. Are application fee waivers available?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-[#6d6d6d]">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, .
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
+              >
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium text-[#282f3b]">
+                  4. Are application fee waivers available?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-[#6d6d6d]">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, .
+                  </p>
+                </div>
+              </div>
+              <div
+                class="collapse collapse-plus bg-white shadow-md hover:shadow-xl"
+              >
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium text-[#282f3b]">
+                  5. Are application fee waivers available?
+                </div>
+                <div class="collapse-content">
+                  <p class="text-[#6d6d6d]">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, .
+                  </p>
                 </div>
               </div>
             </div>
