implement build your team

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
         background-position: center;
         background-repeat: no-repeat;
       }
+      .buildYourWebsite {
+        background-image: url(./images/bg.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
       .transitionEase {
         transition: left 0.5s ease;
       }
@@ -963,6 +969,28 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- start build your website  -->
+
+      <section class="container mx-auto buildYourWebsite rounded mb-16">
+        <div class="px-10 pt-16 pb-48">
+          <div class="space-y-4 flex justify-between flex-wrap">
+            <div>
+              <p class="text-white font-semibold">
+                // We Carry More Than Just Good Coding Skills
+              </p>
+              <h2 class="text-white text-5xl font-bold">
+                Let's Build Your Website!
+              </h2>
+            </div>
+            <button
+              class="btn bg-btnColor text-white border-btnColor rounded-none rounded-tr-xl rounded-bl-xl hover:btn-outline hover:border-btnColor hover:bg-white hover:text-btnColor hover:rounded-none hover:rounded-tl-xl hover:rounded-br-xl transition duration-500"
+            >
+              Contact Us
+            </button>
           </div>
         </div>
       </section>
